# Singularion-Nexus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
configs/: dev.yaml  production.yaml
docs/: README.md  agent-interaction-model.md  agent-registry.md  api-reference.md  architecture-overview.md  architecture.md  data-flow.md  deployment.md  domain-architecture.md  features.md  god-level-agents-index.md  god-level-agents-vol1.md  god-level-agents-vol10.md  god-level-agents-vol2.md  god-level-agents-vol3.md  god-level-agents-vol4.md  god-level-agents-vol5.md  god-level-agents-vol6.md  god-level-agents-vol7.md  god-level-agents-vol8.md  god-level-agents-vol9.md  god-level-agents.md  infrastructure-layers.md  quickstart.md  roadmap.md
proto/: nexus.proto
src/: __init__.py
src/agents/: __init__.py  base.py
src/api/: __init__.py  server.py
src/collective_bargaining/: __init__.py  engine.py
src/consciousness/: __init__.py  nous.py
src/core/: __init__.py  crypto.py  event_bus.py  identity.py  node.py  orchestrator.py  reputation.py  resilience.py
src/dimensional/: __init__.py  commerce.py
tests/: test_collective_bargaining.py  test_crypto.py  test_elyseum.py  test_event_bus.py  test_identity.py  test_intent_router.py  test_iot_gateway.py  test_ledger.py  test_omega_prime.py  test_orchestrator.py  test_pea_mesh.py  test_quantum_llm.py  test_reputation.py  test_resilience.py  test_zkp_engine.py
(+40 files in other folders)
