[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
name = "singularion-nexus"
version = "0.2.0"
description = "Universal AI-Driven Mesh Network for the Autonomous Value Matrix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
